--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -16,3 +16,16 @@
 a {
     color: var(--active-font);
 }
+
+@media screen and (max-width: 630px) {
+    .flexCont {
+        padding: 1rem 2rem;
+    }
+    .flexCont h2 {
+        font-size: clamp(1rem, 4vw, 1.5rem);
+    }
+
+    .flexCont p {
+        display: none;
+    }
+}
