--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -23,3 +23,18 @@
     color: var(--active-font);
     background: transparent;
 }
+
+@media screen and (max-width: 630px) {  
+    .sideContainer {
+      /* display: none; */
+      background-color: transparent;
+      position: fixed;
+      height: 100%;
+      width: 2.5rem;
+      padding: 5rem 0.5rem;
+      top: 5rem;
+      z-index: 1;
+      overflow: hidden;
+    }
+  }
+  
