--- a/src/components/VideoPlayerSPA/VideoPlayer.module.css
+++ b/src/components/VideoPlayerSPA/VideoPlayer.module.css
@@ -1,14 +1,13 @@
 .embededPlayer {
   width: 100%;
-  height: 100%;
+  height: clamp(50%, 100vw, 100%);
   grid-area: video;
 }
 
 .SPVideogrid {
   display: grid;
   grid-template-columns: 1.7fr 1fr;
-  grid-template-rows: 30rem auto;
-  padding-right: 0;
+  grid-template-rows: clamp(16rem, 44vw, 30rem) auto;
   align-items: flex-start;
   grid-template-areas:
     "video   infiniteScroll"
@@ -24,6 +23,19 @@
   gap: 5rem;
 }
 
+.actionButtons {
+  justify-content: flex-start;
+  gap: 1rem;
+}
+
+.actionButtons img {
+  border-radius: 99rem;
+}
+
+.actionIcons {
+  margin-left: auto;
+}
+
 .actionIcons {
   justify-content: flex-start;
   gap: 1rem;
@@ -31,7 +43,7 @@
 
 .actionButtons {
   position: relative;
-  margin-top: 1rem;
+  margin: 1rem 0;
 }
 
 .actionIcons i {
@@ -40,7 +52,14 @@
 
 .sideList {
   grid-area: infiniteScroll;
-  padding: 0 1rem;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.sideList h3 {
+  margin: 0 1rem;
 }
 
 .sideListCard {
@@ -48,6 +67,11 @@
   color: var(--active-font);
   box-shadow: none;
   cursor: pointer;
+  padding: 0 0 0 1rem;
+}
+
+.sideListItem {
+  height: auto;
 }
 
 .sideListCard:hover {
@@ -55,12 +79,16 @@
 }
 
 .vertText {
-  padding: 1rem;
-  gap: 1rem;
+  padding: 0 0 0 1rem;
+  gap: 0.5rem;
+}
+
+.vertText p {
+  font-size: 0.8rem;
 }
 
 .horizImg {
-  width: 60%;
+  width: 50%;
 }
 
 .addPlaylist {
@@ -114,7 +142,6 @@
 @media screen and (max-width: 1350px) {
   .SPVideogrid {
     grid-template-columns: 1fr;
-    padding-right: 2rem;
     grid-template-areas:
       "video"
       "buttons"
@@ -124,7 +151,24 @@
   .actionButtons h2 {
     font-size: clamp(1rem, 3vw, 1.5rem);
   }
+
   .sideListCard {
     align-items: flex-start;
+  }
+}
+
+@media screen and (max-width: 1115px) {
+  .sideListCard {
+    width: 100%;
+  }
+
+  .sideListItem img {
+    width: clamp(10rem, 18vw, 12rem);
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .actionButtons {
+    margin: 1rem;
   }
 }
